tell circle to use java 8. Skip `npm install` and `lein deps`